force-app/main/default/objects/custom_create62__c/custom_create62__c.object-meta.xml
<CustomObject>
    <label>Custom created object62</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects62</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>