force-app/main/default/objects/custom_create62__c/fields/custom_create_62field659__c.field-meta.xml
<CustomField>
    <fullName>custom_create_62field659__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 62field659</label>
    <type>Checkbox</type>
</CustomField>